<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/step3"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fragmentwindoomeasure3xml1"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:gravity="center_horizontal"
        android:textColor="@android:color/secondary_text_dark" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minPicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentwindoograph2"
            android:layout_gravity="center_vertical" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/secPicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentwindoograph1"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentwindoomeasure3xml2"
        android:id="@+id/checkBox"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:layout_marginBottom="16dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentwindoomeasure3xml3"
        android:id="@+id/autoSend"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:layout_marginBottom="16dp"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fragmentwindoomeasure3xml4"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/secondary_text_dark" />

</LinearLayout>