<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AboutFragment"
    android:id="@+id/about">

    <me.grantland.widget.AutofitTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:id="@+id/aboutTextView"
        android:layout_gravity="center_horizontal|top"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:gravity="center_horizontal" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dip" />

    <me.grantland.widget.AutofitTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_organization"
        android:layout_gravity="center_horizontal|top"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center_horizontal" />
    <me.grantland.widget.AutofitTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_website"
        android:layout_gravity="center_horizontal|top"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center_horizontal"
        android:autoLink="web"
        android:clickable="false"
        android:linksClickable="true" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dip" />

    <me.grantland.widget.AutofitTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_contact"
        android:layout_gravity="center_horizontal|top"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center_horizontal" />
    <me.grantland.widget.AutofitTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_contact_email"
        android:layout_gravity="center_horizontal|top"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:autoLink="email" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dip" />

    <me.grantland.widget.AutofitTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_date"
        android:layout_gravity="center_horizontal|top"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center_horizontal" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dip" />

    <me.grantland.widget.AutofitTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_author"
        android:layout_gravity="center_horizontal|top"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center_horizontal" />
    <me.grantland.widget.AutofitTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_author_email"
        android:layout_gravity="center_horizontal|top"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:autoLink="email" />

</LinearLayout>
